[package]
name = "luau0-src"
version = "0.7.1+luau591"
authors = ["Aleksandr Orlenko <zxteam@protonmail.com>"]
edition = "2021"
repository = "https://github.com/khvzak/luau-src-rs"
keywords = ["lua", "luau", "roblox"]
readme = "README.md"
license = "MIT"
description = """
Minimal sources of Roblox Luau and logic to build them.
"""

[workspace]
members = ["testcrate", "nostd-testcrate"]

[dependencies]
cc = "1.0.82"

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
