[package]
name = "nostd-testcrate"
version = "0.1.0"
authors = ["Aleksandr Orlenko <zxteam@protonmail.com>"]

[build-dependencies.luau0-src]
path = ".."

[dependencies]
cortex-m = "0.7.7"
cortex-m-rt = "0.7.3"
cortex-m-semihosting = "0.5.0"
panic-halt = "0.2.0"
compiler_builtins = { git = "https://github.com/rust-lang/compiler-builtins" }
